made left aside block in header

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -32,3 +32,11 @@ a {
   transform: translateX(-100%);
 }
 
+.section__title-back {
+  font-weight: 800;
+  font-size: 200px;
+  line-height: 156px;
+  text-transform: uppercase;
+  color: #ffffff;
+  opacity: 0.07;
+}
