--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,16 @@ body {
 
 a {
   display: inline-block;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 
