start new section 'Surf'

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,13 +3,16 @@ body {
   font-weight: 300;
   font-size: 16px;
   color: #ffffff;
+  background-color: $main-bg;
 }
 
 a {
   display: inline-block;
   text-decoration: none;
+  color: #ffffff;
   &:hover {
     text-decoration: none;
+    color: #ffffff;
   }
 }
 
@@ -19,6 +22,18 @@ ul {
   list-style: none;
 }
 
+.container {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.subtitle-main {
+  font-size: 40px;
+  font-weight: 800;
+  line-height: 1;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
 
 .suptitle-left,
 .suptitle-right {
@@ -43,11 +58,68 @@ ul {
   transform: translateX(-100%);
 }
 
+.section__title {
+  display: inline-block;
+  font-size: 80px;
+  font-weight: 800;
+  line-height: 1;
+  text-transform: uppercase;
+  position: relative;
+  &::before {
+    position: absolute;
+    display: block;
+    content: '';
+    top: -5px;
+    right: 0;
+    width: 80px;
+    height: 1px;
+    background-color: $accent;
+  }
+}
 .section__title-back {
   font-weight: 800;
   font-size: 200px;
-  line-height: 156px;
+  line-height: 1;
   text-transform: uppercase;
   color: #ffffff;
-  opacity: 0.07;
+  opacity: 0.02;
+  &_header {
+    opacity: 0.07;
+  }
+  &_surf {
+    position: absolute;
+    top: 5px;
+    left: -290px;
+  }
+}
+
+.btn-box {
+  display: block;
+  font-size: 40px;
+  line-height: 1;
+  font-weight: 800;
+  text-transform: uppercase;
+  &__first {
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: -30px;
+      width: 20px;
+      height: 1px;
+      background-color: #ffffff;
+    }
+  }
+  &__second {
+    display: inline-block;
+    padding: 20px;
+    background-color: $accent;
+  }
+  &__arrow {
+    display: inline-block;
+    padding-left: 15px;
+  }
 }
