--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -232,11 +232,7 @@
       margin-bottom: 50px;
     }
     &-name {
-      font-size: 40px;
-      font-weight: 800;
-      line-height: 1;
-      text-transform: uppercase;
-      margin-bottom: 30px;
+      text-align: right;
     }
     .info-link__image {
       display: inline-block;
