--- a/scss/blocks/_surf.scss
+++ b/scss/blocks/_surf.scss
@@ -25,4 +25,40 @@
     height: 350px;
     opacity: 0.03;
   }
+  &-slider {
+    padding-top: 110px;
+  }
+  &-slider__item {
+    position: relative;
+    max-width: 400px;
+    min-height: 750px;
+    background-position: center;
+    background-size: cover;
+    padding: 80px 40px;
+    z-index: 1;
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #1c2121;
+      opacity: 0.75;
+      z-index: -1;
+    }
+    &-title {
+      max-width: 50%;
+    }
+    &-placename {
+      position: absolute;
+      bottom: 80px;
+      left: 40px;
+      font-size: 18px;
+      line-height: 22px;
+      letter-spacing: 8px;
+      text-transform: uppercase;
+      transform: rotate(-90deg);
+    }
+  }
 }
