--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,12 @@
 @import "global";
 @import "blocks/header";
 @import "blocks/surf";
+@import "blocks/holder";
 @import "blocks/travel";
+@import "blocks/sleep";
+
+
+
 
 
 
