--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -46,3 +46,36 @@
   font-weight: 100;
   font-style: normal;
 }
+
+// Icomoon
+@font-face {
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon.eot?4m9haz');
+  src: url('../fonts/icomoon.eot?4m9haz#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?4m9haz') format('truetype'),
+    url('../fonts/icomoon.woff?4m9haz') format('woff'),
+    url('../fonts/icomoon.svg?4m9haz#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-star:before {
+  content: "\e900";
+}
