add counter(guests, nights) for section 'sleep' slider

--- a/scss/blocks/_holder.scss
+++ b/scss/blocks/_holder.scss
@@ -79,6 +79,7 @@
       font-weight: 800;
       font-size: 40px;
       line-height: 1;
+      letter-spacing: 3px;
     }
     &-subvalue {
       font-size: 14px;
