--- a/scss/blocks/_holder.scss
+++ b/scss/blocks/_holder.scss
@@ -60,9 +60,10 @@
     text-transform: uppercase;
     &-item {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: flex-start;
-      max-width: 280px;
+      max-width: 400px;
+      width: 100%;
     }
     &-vert {
       transform: rotate(180deg);
