made section shop

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -100,7 +100,8 @@ ul {
   }
   &_surf,
   &_holder-travel,
-  &_holder-sleep {
+  &_holder-sleep,
+  &_holder-shop {
     position: absolute;
     top: 5px;
     left: -290px;
