--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -97,5 +97,221 @@
 }
 
 @media (max-width: 1200px) {
+  .header {
+    &__aside {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 650px;
+      width: 100%;
+      border: none;
+      height: 100px;
+      background-color: rgba(#9E9E9E, .25);
+      padding-right: 20px;
+    }
+    &__logo {
+      align-self: flex-start;
+      margin-bottom: 0;
+      &-img {
+        max-width: none;
+        width: auto;
+        height: 155px;
+      }
+    }
+    &__menu {
+      margin-bottom: 0;
+    }
+    .menu__list {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      align-items: center;
+    }
+    .menu__item {
+      margin-bottom: 0;
+      margin-right: 25px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    &__search {
+      margin-bottom: 0;
+    }
+    &__date {
+      margin-bottom: 0;
+      &-day {
+        margin-bottom: 0;
+      }
+    }
+    .button__next-section {
+      left: 30px;
+      bottom: 30px;
+    }
+    .slider-dots,
+    .slider-item__info {
+      right: 35px;
+    }
+  }
+}
 
+@media (max-width: 1040px) {
+  .header {
+    &__aside {
+      max-width: 350px;
+    }
+    .button__next-section {
+      display: none;
+    }
+
+    .menu-btn {
+      display: block;
+    }
+    &__menu {
+      background-color: #000;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transform: translateX(-100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: ease-in-out all .5s;
+      &.active {
+        transform: translateX(0);
+      }
+    }
+    .slider-dots {
+      bottom: 5px;
+      right: 0;
+      left: 0;
+      margin: 0 auto;
+      max-width: 920px;
+      width: 100%;
+      justify-content: center;
+    }
+
+    .slider-dots__item {
+      max-width: 200px;
+      min-width: 130px;
+    }
+
+    .slider-item__info {
+      right: 20px;
+      bottom: 50px;
+    }
+    .slider-next_header,
+    .slider-prev_header {
+      top: 20px;
+    }
+    .slider-next_header {
+      right: 30px;
+    }
+    .slider-prev_header {
+      right: 70px;
+    }
+    &__map {
+      svg {
+        width: 450px;
+        height: 250px;
+      }
+
+      &-current {
+        top: 30px;
+        right: 100px;
+        font-size: 12px;
+      }
+
+      &-place-1 {
+        top: 100px;
+        right: 295px;
+        font-size: 12px;
+      }
+
+      &-place-2 {
+        top: 155px;
+        right: 205px;
+        font-size: 12px;
+      }
+
+      &-place-3 {
+        top: 170px;
+        right: 165px;
+        font-size: 12px;
+      }
+
+      &-place-4 {
+        top: 220px;
+        right: 135px;
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    &__map {
+      display: none;
+    }
+    .slider-item__info {
+      bottom: 0;
+    }
+    .slider-dots {
+      display: none;
+    }
+  }
+}
+
+@media (max-height: 450px) {
+  .header {
+    &__map {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .header {
+    &__aside {
+      max-width: 100%;
+    }
+    .slider-item__info-title {
+      font-size: 40px;
+      line-height: 40px;
+      margin-bottom: 10px;
+    }
+    .slider-item__info-name {
+      font-size: 26px;
+      line-height: 26px;
+    }
+    .slider-next_header,
+    .slider-prev_header {
+      top: 165px;
+    }
+
+    .slider-next_header {
+      right: 30px;
+    }
+
+    .slider-prev_header {
+      right: 70px;
+    }
+
+    .menu-btn {
+      top: 110px;
+    }
+
+    &__date-day {
+      font-size: 45px;
+      line-height: 45px;
+    }
+    &__title {
+      top: 40px;
+      left: 10px;
+    }
+  }
 }
